--- a/css/Login.css
+++ b/css/Login.css
@@ -1,37 +1,38 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:400,700"); 
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:400,700");
 
 body {
-    font-family: Comfortaa, sans-serif;
+  font-family: Comfortaa, sans-serif;
 }
 
 #a {
-    width: 15rem;
+  width: 15rem;
 }
 #page {
-overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 #page.toggled #sidebar {
-    margin-left: -15rem;
+  margin-left: -15rem;
 }
 
 #sidebar {
-    min-height: 100vh;
-    margin-left: 0;
-    width: 15rem;
-    -webkit-transition: margin 0.25s ease-out;
-    -moz-transition: margin 0.25s ease-out;
-    -o-transition: margin 0.25s ease-out;
-    transition: margin 0.25s ease-out;
-
+  min-height: 100vh;
+  margin-left: 0;
+  width: 15rem;
+  -webkit-transition: margin 0.25s ease-out;
+  -moz-transition: margin 0.25s ease-out;
+  -o-transition: margin 0.25s ease-out;
+  transition: margin 0.25s ease-out;
 }
 
 #page-content {
-    min-width: 0;
-    width: 100%;
+  min-width: 0;
+  width: 100%;
 }
 #Logologin img {
-    width: 80%
+  width: 70%;
 }
-label {color: #96772b;
-text-shadow: 0; }
+label {
+  color: #96772b;
+  text-shadow: 0;
+}
