--- a/css/Login.css
+++ b/css/Login.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:400,700");
 
 body {
   font-family: Comfortaa, sans-serif;
@@ -33,6 +32,6 @@ body {
   width: 70%;
 }
 label {
-  color: #96772b;
+  color: #f0c24e;
   text-shadow: 0;
 }
